# telegrambot

./: .env.example  .gitignore  README.md  pyproject.toml
db/: init.sql  seed.sql
db/migrations/: 20260521_interactive_workflows.sql
deploy/: college-bot.service.example
scripts/: reset_db.py
src/college_bot/: __init__.py  config.py  db.py  handlers.py  keyboards.py  main.py  ui.py
