[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "college-telegram-bot"
version = "0.1.0"
description = "Telegram bot for college student FAQ and services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.17,<4",
    "asyncpg>=0.30,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
